--- a/site/flex.css
+++ b/site/flex.css
@@ -39,10 +39,11 @@ h1{
     50% { color: blue; }
     100% { color: black; }
   }
-h1:hover{
+#a:hover{
   -ms-transform: scale(1.5); /* IE 9 */
   -webkit-transform: scale(1.5); /* Safari 3-8 */
   transform: scale(1.5); 
+  background-color:blue;
 }
   .c
   {
